--- a/Demo.PL/Demo.PL.csproj
+++ b/Demo.PL/Demo.PL.csproj
@@ -23,4 +23,13 @@
     <Folder Include="wwwroot\Files\Images\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="appsettings.Development.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
