--- a/Demo.PL/appsettings.json
+++ b/Demo.PL/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server = JOHN; Database = MvcDemoDB; Trusted_Connection = true; TrustServerCertificate=True; MultipleActiveResultSets = true;"
+    "DefaultConnection": "Server = .; Database = MvcDemoDB; Trusted_Connection = true; TrustServerCertificate=True; MultipleActiveResultSets = true;"
   }
 }
