--- a/Demo.PL/appsettings.Development.json
+++ b/Demo.PL/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server = .; Database = MvcDemoDB; Trusted_Connection = true; TrustServerCertificate=True; MultipleActiveResultSets = true;"
   }
 }
